# covid-planner

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/covid_planner/: __init__.py  covid_planner.py  utils.py
src/covid_planner/templates/: api_keys_template.yaml
